# poo_bdd

./: .gitignore  README.md  pyproject.toml
src/: books.db  code_to_update.py  data_ingestion.py  models.py  requetes.py  test_faker.py
tests/: test_models.py
utils/: mes_fonctions.py
